<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">


    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/workout_video_group_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        style="@style/Preview_Header_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Workout_Name"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <TextView
        android:id="@+id/textView11"
        style="@style/Preview_Low_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Workout_Info"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:id="@+id/textView12"
        style="@style/Preview_Header_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        style="@style/Preview_Low_Text"
        android:layout_width="372dp"
        android:layout_height="82dp"
        android:layout_marginTop="10dp"
        android:text="@string/track_title"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ProgressBar
        android:id="@+id/progressBarItem"
        style="@style/CircularPurpleDeterminateProgressBar"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:max="100"
        android:progress="10"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView13" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="32:10"
        android:textSize="30dp"
        style="@style/Preview_Header_Text"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarItem"
        app:layout_constraintEnd_toEndOf="@+id/progressBarItem"
        app:layout_constraintStart_toStartOf="@+id/progressBarItem"
        app:layout_constraintTop_toTopOf="@+id/progressBarItem" />
    <Button
        android:id="@+id/button2"
        style="@style/ButtonDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/default_button"
        android:text="@string/GetStarted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>