<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DataEntryFragment">

    <TextView
        android:layout_marginTop="35dp"
        android:id="@+id/textView3"
        style="@style/Preview_Low_Text"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Preview_Header_Text"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_layout"
        style="@style/DefaultTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="OutlinedBox"
        android:theme="@style/EditTextThemeOverlay"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:startIconDrawable="@drawable/profile_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F0F4F4"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:textColorHighlight="@color/textColorHighlight"
            app:boxBackgroundColor="@color/linear" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lat_name_layout"
        style="@style/DefaultTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="OutlinedBox"
        android:theme="@style/EditTextThemeOverlay"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_layout"
        app:startIconDrawable="@drawable/profile_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F0F4F4"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:textColorHighlight="@color/textColorHighlight"
            app:boxBackgroundColor="@color/linear" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/DefaultTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="OutlinedBox"
        android:theme="@style/EditTextThemeOverlay"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat_name_layout"
        app:startIconDrawable="@drawable/message_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F0F4F4"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:textColorHighlight="@color/textColorHighlight"
            app:boxBackgroundColor="@color/linear" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_text_input_layout"
        style="@style/DefaultTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="OutlinedBox"
        android:theme="@style/EditTextThemeOverlay"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_layout"
        app:startIconDrawable="@drawable/lock_icon"
        app:endIconDrawable="@drawable/hide_password_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/outlined_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F0F4F4"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:textColorHighlight="@color/textColorHighlight"
            app:boxBackgroundColor="@color/linear" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        style="@style/Preview_Low_Text"
        android:textSize="12dp"
        android:id="@+id/checkBox"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:text="@string/PrivacyPolicy"
        app:layout_constraintStart_toStartOf="@+id/outlined_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/outlined_text_input_layout" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/ButtonDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/default_button"
        android:text="Бляб ля"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/outlined_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/outlined_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>